--- a/fashion-tech.html
+++ b/fashion-tech.html
@@ -114,7 +114,7 @@
                     <div id="hero-styles" class="parallax-onscroll">
                         <div id="hero-caption" class="text-align-center">
                             <div class="inner">
-                                <h1 class="hero-title">PC <span>Express</span></h1>
+                                <h1 class="hero-title">Women in <span>Fashion Tech.</span></h1>
                                 <h2 class="hero-subtitle">Designed digital creative at Loblaw Digital for Canada's simplest and most delightful online shopping experience, PC Express.</h2>
 
                                 <div class="scroll-down-wrap no-border link">
