--- a/globljam.html
+++ b/globljam.html
@@ -74,13 +74,12 @@
                                 <ul data-breakpoint="1025" class="flexnav">
                                     <li class="link menu-timeline active"><a class="link" href="#">work</a>
 																			<ul>
-                                        <li><a class="ajax-link" href="index.html" data-type="page-transition">Canada Basketball x Globl Jam</a></li>
-																				<li><a class="ajax-link" href="index.html" data-type="page-transition">MLSE Foundation x Change the Game 2.0</a></li>
-																				<li><a class="ajax-link" href="index-centered.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
-                                        <li><a class="ajax-link" href="index-full.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
-                                        <li><a class="ajax-link" href="index-fullmenu.html" data-type="page-transition">Canada Basketball x Mad Love</a></li>
-																				<li><a class="ajax-link" href="index-fullmenu.html" data-type="page-transition">Loblaw Digital x PC Express</a></li>
-																				<li><a class="ajax-link" href="index-fullmenu.html" data-type="page-transition">Fashion Exchange x Women in Fashion Technology</a></li>
+																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
+                                        <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
+                                        <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Canada Basketball x Mad Love</a></li>
+																				<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">Loblaw Digital x PC Express</a></li>
+																				<li><a class="ajax-link" href="fashion-tech" data-type="page-transition">Fashion Exchange x Women in Fashion Technology</a></li>
+																				<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
                                       </ul>
                                     </li>
                                     <li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">say hello</a></li>
