--- a/about.html
+++ b/about.html
@@ -75,12 +75,12 @@
                                       <ul>
                                         <!-- <li><a class="ajax-link" href="index.html" data-type="page-transition">Canada Basketball x Globl Jam</a></li>
 																				<li><a class="ajax-link" href="index.html" data-type="page-transition">MLSE Foundation x Change the Game 2.0</a></li> -->
-                                        <li><a class="ajax-link" href="index-centered.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
-                                        <li><a class="ajax-link" href="index-full.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
-                                        <li><a class="ajax-link" href="index-fullmenu.html" data-type="page-transition">Canada Basketball x Mad Love</a></li>
-																				<li><a class="ajax-link" href="index-fullmenu.html" data-type="page-transition">Loblaw Digital x PC Express</a></li>
-																				<li><a class="ajax-link" href="index-fullmenu.html" data-type="page-transition">Fashion Exchange x Women in Fashion Technology</a></li>
-																				<li><a class="ajax-link" href="index-fullmenu.html" data-type="page-transition">Misc.</a></li>
+																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
+                                        <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
+                                        <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Canada Basketball x Mad Love</a></li>
+																				<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">Loblaw Digital x PC Express</a></li>
+																				<li><a class="ajax-link" href="fashion-tech" data-type="page-transition">Fashion Exchange x Women in Fashion Technology</a></li>
+																				<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
 																			</ul>
                                     </li>
                                     <li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">say hello</a></li>
