--- a/fashion-tech.html
+++ b/fashion-tech.html
@@ -131,7 +131,7 @@
                 </div>
                 <div id="hero-bg-wrapper">
                     <div id="hero-image-parallax">
-                        <div id="hero-bg-image" style="background-image:url(images/pcx-hero.jpg)">
+                        <div id="hero-bg-image" style="background-image:url(images/fashiontech-hero.jpg)">
                         </div>
                     </div>
                 </div>
@@ -148,7 +148,8 @@
 												<div class="container">
 
 													<p>project</p>
-													<h5 class="has-animation" data-delay="10">Launched across Canada in May 2019, PC Express is an online shopping and delivery service under the Loblaw Enterprise. created digital assets for on-site, print, and social needs which include but are not limited to designing for hero spots and motion graphics.</h5>
+													<h5 class="has-animation" data-delay="10">Fashion Exchange Toronto launched the Women in Fashion Technology program in the Fall of 2018. As an Interaction Designer for this project, I was tasked to create a new brand identity, marketing material, and implement new interactive elements to FX’s existing online webpage.
+													<br class="destroy">With the addition of the Education section, prospective students are now able to explore the various programs offered at Fashion Exchange and inquire directly to Faculty responsible for enrolment.</h5>
 
 												</div>
 
@@ -162,23 +163,20 @@
 
 														<div class="one_third has-animation" data-delay="150">
 															<p>role</p>
-															<h5>Designer, Loblaw Digital<br class="destroy">creative services</h5>
+															<h5>Designer</h5>
 														</div>
 
 														<div class="one_third has-animation" data-delay="150">
 																		<p>Team</p>
-																		<h5><h7>Creative Director </h7>Brittany Timmings
-																		<br class="destroy"><h7>Designers </h7>Hannah James, Aoife Kilpatrick, Sonica Katoch
-																		<br class="destroy"><h7>Copywriter </h7>Tom Buchanan
-																		<br class="destroy"><h7>Illustrator </h7>Adrian Forrow
-																		<br class="destroy"><h7>Agency </h7>John St.</h5>
+																		<h5><h7>Director </h7>Marilyn McNeil-Morin
+																		<br class="destroy"><h7>Designers </h7>Johnny Chow, Sonica Katoch</h5>
 																</div>
 
 														<div class="one_third last has-animation" data-delay="150">
 															<p>tools</p>
-															<h5>ADOBE ILLUSTRATOR
-															<br class="destroy">ADOBE AFTER EFFECTS
-															<br class="destroy">SKETCH</h5>
+															<h5>ADOBE PHOTOSHOP
+															<br class="destroy">ADOBE ILLUSTRATOR
+															<br class="destroy">WORDPRESS</h5>
 
 														</div>
 												</div>
@@ -193,7 +191,8 @@
 
 														<div class="one_third has-animation" data-delay="150">
 																		<p>Client</p>
-																		<h5>IN-HOUSE</h5>
+																		<h5>fashion exchange toronto
+																		<br class="destroy">George Brown College</h5>
 																</div>
 
 														<div class="one_third last has-animation" data-delay="150">
@@ -212,7 +211,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/pcx01.jpg" alt="Image Title">
+													<img src="images/projects/fx01.jpg" alt="Image Title">
 												</figure>
 
 											</div>
@@ -226,7 +225,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/pcx02.jpg" alt="Image Title">
+													<img src="images/projects/fx02.jpg" alt="Image Title">
 												</figure>
 
 											</div>
@@ -240,7 +239,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/pcx03.jpg" alt="Image Title">
+													<img src="images/projects/fx03.jpg" alt="Image Title">
 												</figure>
 
 											</div>
@@ -254,7 +253,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/pcx04.jpg" alt="Image Title">
+													<img src="images/projects/fx04.jpg" alt="Image Title">
 												</figure>
 
 											</div>
@@ -268,7 +267,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/pcx05.jpg" alt="Image Title">
+													<img src="images/projects/fx05.jpg" alt="Image Title">
 												</figure>
 
 											</div>
@@ -282,7 +281,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/pcx06.jpg" alt="Image Title">
+													<img src="images/projects/fx06.jpg" alt="Image Title">
 												</figure>
 
 											</div>
@@ -296,7 +295,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/pcx07.jpg" alt="Image Title">
+													<img src="images/projects/fx07.jpg" alt="Image Title">
 												</figure>
 
 											</div>
@@ -310,7 +309,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/pcx08.jpg" alt="Image Title">
+													<img src="images/projects/fx08.jpg" alt="Image Title">
 												</figure>
 
 											</div>
@@ -324,22 +323,37 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/pcx09.jpg" alt="Image Title">
+													<img src="images/projects/fx09.jpg" alt="Image Title">
 												</figure>
 
 											</div>
 
 										</div>
 										<!--/Row -->
+
+										<!-- Row -->
+										<div class="vc_row full">
+
+											<div class="container">
+
+												<figure class="has-animation" data-delay="50" >
+													<img src="images/projects/fx10.jpg" alt="Image Title">
+												</figure>
+
+											</div>
+
+										</div>
+										<!--/Row -->
+
 
                 	<!--/Main Page Content -->
 
                     <!-- Project Navigation -->
                     <div id="project-nav">
                         <div class="next-project-wrap">
-                            <div class="next-project-image" style="background-image:url(images/fashiontech-hero.jpg)"></div>
-                            <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="fashion-tech.html">
-                                <div class="main-title">Fashion <span>Tech.</span></div>
+                            <div class="next-project-image" style="background-image:url(images/misc-hero.png)"></div>
+                            <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="misc.html">
+                                <div class="main-title">Misc.</div>
                                 <div class="main-subtitle">Next Project</div>
                             </a>
                         </div>
