--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             <div class="slider-img" data-slide="3" data-src="images/madlove-hero.jpg"></div>
 														<div class="slider-img" data-slide="4" data-src="images/pcx-hero.jpg"></div>
                             <div class="slider-img" data-slide="5" data-src="images/fashiontech-hero.jpg"></div>
-														<div class="slider-img" data-slide="6" data-src="images/misc.png"></div>
+														<div class="slider-img" data-slide="6" data-src="images/misc-hero.png"></div>
                         </div>
                     </div>
                     <!--/Showcase Gallery -->
