--- a/misc.html
+++ b/misc.html
@@ -131,7 +131,7 @@
                 </div>
                 <div id="hero-bg-wrapper">
                     <div id="hero-image-parallax">
-                        <div id="hero-bg-image" style="background-image:url(images/madlove-hero.jpg)">
+                        <div id="hero-bg-image" style="background-image:url(images/misc-hero.png)">
                         </div>
                     </div>
                 </div>
