fifa img update

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 																<!-- Section Slide -->
 																<div class="swiper-slide" data-number="06" data-slide="6">
 																		<a class="ajax-link-project" data-type="page-transition" href="misc.html">
-																			<div class="slide-title" data-number="06"><span>Miscellaneous</span></div>
+																			<div class="slide-title" data-number="06"><span>Misc.</span></div>
 																		</a>
 																		<div class="slide-caption" data-slide-caption="6">A collection of work across my career as a designer.</div>
 
@@ -226,7 +226,7 @@
                                 </div>
                             </div> -->
 
-                            <div class="slider-img" data-slide="1" data-src="images/toronto-fifa-hero.jpeg">
+                            <div class="slider-img" data-slide="1" data-src="images/fifa_ALLINTO.png">
                             	<div class="hero-video-wrapper">
                                     <video loop muted class="bgvid">
                                         <source src="motion/Transistion-Set.mp4" type="video/mp4">
