--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                 </div>
                             </div> -->
 
-                            <div class="slider-img" data-slide="1" data-src="images/fifa_ALLINTO.png">
+                            <div class="slider-img" data-slide="1" data-src="images/toronto-fifa-hero.jpeg">
                             	<div class="hero-video-wrapper">
                                     <video loop muted class="bgvid">
                                         <source src="motion/Transistion-Set.mp4" type="video/mp4">
