--- a/fifa-2026.html
+++ b/fifa-2026.html
@@ -131,7 +131,7 @@
                 </div>
                 <div id="hero-bg-wrapper">
                     <div id="hero-image-parallax">
-                        <div id="hero-bg-image" style="background-image:url(images/fifa_ALLINTO.png)">
+                        <div id="hero-bg-image" style="background-image:url(images/toronto-fifa-hero.jpeg)">
                         	<div class="hero-video-wrapper">
                                 <video loop muted class="bgvid">
                                     <source src="motion/Transistion-Set.mp4" type="video/mp4">
