--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 																				<li><a class="ajax-link" href="index.html" data-type="page-transition">MLSE Foundation x Change the Game 2.0</a></li> -->
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
                                         <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
-                                        <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Canada Basketball x Mad Love</a></li>
+                                        <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love x Canada Basketball</a></li>
 																				<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">Loblaw Digital x PC Express</a></li>
 																				<li><a class="ajax-link" href="fashion-tech" data-type="page-transition">Fashion Exchange x Women in Fashion Technology</a></li>
 																				<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
@@ -130,7 +130,7 @@
                     <div class="vc_row">
                         <div class="container">
 
-                            <h2><a style="color:#35FF69;">Sonica Katoch</a> is currently a Designer at Maple Leaf Sports & Entertainment based in Toronto.</h2>
+                            <h2><a style="color:#35FF69;">Sonica Katoch</a> is currently a Designer at Maple Leaf Sports & Entertainment based in Tkaronto/Toronto.</h2>
 														<!-- <h2>Sonica Katoch is a Designer creating experiences in the world of sports, art, music and culture at Maple Leaf Sports & Entertainment based in Toronto.</h2> -->
 
                         </div>
