--- a/globljam.html
+++ b/globljam.html
@@ -76,7 +76,7 @@
 																			<ul>
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
                                         <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
-                                        <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Canada Basketball x Mad Love</a></li>
+                                        <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love x Canada Basketball</a></li>
 																				<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">Loblaw Digital x PC Express</a></li>
 																				<li><a class="ajax-link" href="fashion-tech" data-type="page-transition">Fashion Exchange x Women in Fashion Technology</a></li>
 																				<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
