--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 																				<!-- <li><a class="ajax-link" href="index.html" data-type="page-transition">MLSE Foundation x Change the Game 2.0</a></li> -->
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
                                         <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
-                                        <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Canada Basketball x Mad Love</a></li>
+                                        <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love x Canada Basketball</a></li>
 																				<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">Loblaw Digital x PC Express</a></li>
 																				<li><a class="ajax-link" href="fashion-tech" data-type="page-transition">Fashion Exchange x Women in Fashion Technology</a></li>
 																				<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
@@ -122,7 +122,7 @@
                                 <!-- Section Slide -->
                                 <!-- <div class="swiper-slide active" data-number="01" data-slide="1">
                                     <a class="ajax-link-project" data-type="page-transition" href="project01.html">
-                                    	<div class="slide-title" data-number="01"><span>GLOBLJAM</span></div>
+                                    	<div class="slide-title" data-number="01"><span>GLOBLJAM x Canada Basketball</span></div>
                                     </a>
                                     <div class="slide-caption" data-slide-caption="1">Lorem Ipsum</div>
                                 </div> -->
@@ -140,7 +140,7 @@
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="01" data-slide="1">
                                     <a class="ajax-link-project" data-type="page-transition" href="fifa-2026.html">
-                                    	<div class="slide-title" data-number="01"><span>FIFA World Cup 2026</span></div>
+                                    	<div class="slide-title" data-number="01"><span>Toronto x FIFA World Cup 2026</span></div>
                                     </a>
                                     <div class="slide-caption" data-slide-caption="1">A creative package designed for Toronto’s FIFA World Cup 2026 host city bid.</div>
                                 </div>
@@ -160,7 +160,7 @@
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="03" data-slide="3">
                                     <a class="ajax-link-project" data-type="page-transition" href="mad-love.html">
-                                    	<div class="slide-title" data-number="03"><span>Mad Love</span></div>
+                                    	<div class="slide-title" data-number="03"><span>Mad Love x Canada Basketball</span></div>
                                     </a>
                                     <div class="slide-caption" data-slide-caption="3">A social campaign to bring awareness to women athletes in basketball and beyond.</div>
                                 </div>
