index naming revisions

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="01" data-slide="1">
                                     <a class="ajax-link-project" data-type="page-transition" href="fifa-2026.html">
-                                    	<div class="slide-title" data-number="01"><span>Toronto x FIFA World Cup 2026</span></div>
+                                    	<div class="slide-title" data-number="01"><span>FIFA 2026</span></div>
                                     </a>
                                     <div class="slide-caption" data-slide-caption="1">A creative package designed for Toronto’s FIFA World Cup 2026 host city bid.</div>
                                 </div>
@@ -150,7 +150,7 @@
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="02" data-slide="2">
                                     <a class="ajax-link-project" data-type="page-transition" href="raptors-tunnel.html">
-                                    	<div class="slide-title" data-number="02"><span>Toronto Raptors Tunnel</span></div>
+                                    	<div class="slide-title" data-number="02"><span>Raptors Tunnel</span></div>
                                     </a>
                                    	<div class="slide-caption" data-slide-caption="2">Re-skinning the iconic Raptors Tunnel in Scotiabank Arena.</div>
                                 </div>
@@ -160,9 +160,9 @@
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="03" data-slide="3">
                                     <a class="ajax-link-project" data-type="page-transition" href="mad-love.html">
-                                    	<div class="slide-title" data-number="03"><span>Mad Love x Canada Basketball</span></div>
+                                    	<div class="slide-title" data-number="03"><span>Mad Love</span></div>
                                     </a>
-                                    <div class="slide-caption" data-slide-caption="3">A social campaign to bring awareness to women athletes in basketball and beyond.</div>
+                                    <div class="slide-caption" data-slide-caption="3">A social campaign for Canada Basketball to bring awareness to women athletes in basketball and beyond.</div>
                                 </div>
                                 <!--/Section Slide -->
 
@@ -181,7 +181,7 @@
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="05" data-slide="5">
                                     <a class="ajax-link-project" data-type="page-transition" href="project06.html">
-                                   		<div class="slide-title" data-number="05"><span>Women in Fashion Tech.</span></div>
+                                   		<div class="slide-title" data-number="05"><span>Fashion Tech.</span></div>
                                     </a>
                                    	<div class="slide-caption" data-slide-caption="5">UX/UI and brand identity created for the Women in Fashion Technology program at Fashion Exchange Toronto.</div>
 
