--- a/fifa-2026.html
+++ b/fifa-2026.html
@@ -416,6 +416,22 @@
 										<!--/Row -->
 
 										<!-- Row -->
+
+											<div class="vc_row row_padding_top has-animation" data-delay="10">
+
+                        <div style="padding:41.88% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/691541044?h=0c4d1558e3&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="FIFA Opener"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+                      </div>
+
+											<!-- Row -->
+
+												<div class="vc_row row_padding_top row_padding_bottom has-animation" data-delay="10">
+
+	                        <div style="padding:41.88% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/691541931?h=d37394f898&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="If The World Was A Village"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+	                      </div>
+
+										<!-- Row -->
 										<div class="vc_row full">
 
 											<div class="container">
