--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                     <a class="ajax-link-project" data-type="page-transition" href="raptors-tunnel.html">
                                     	<div class="slide-title" data-number="02"><span>Raptors Tunnel</span></div>
                                     </a>
-                                   	<div class="slide-caption" data-slide-caption="2">Re-skinning the iconic Raptors Tunnel in Scotiabank Arena.</div>
+                                   	<div class="slide-caption" data-slide-caption="2">Re-skinning the Toronto Raptors iconic tunnel in the Scotiabank Arena.</div>
                                 </div>
                                 <!--/Section Slide -->
 
