globl jam addition

--- a/globljam.html
+++ b/globljam.html
@@ -74,6 +74,7 @@
                                 <ul data-breakpoint="1025" class="flexnav">
                                     <li class="link menu-timeline active"><a class="link" href="#">work</a>
 																			<ul>
+																				<li><a class="ajax-link" href="index.html" data-type="page-transition">Canada Basketball x Globl Jam</a></li>
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
                                         <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
                                         <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love x Canada Basketball</a></li>
@@ -152,7 +153,7 @@
 												<div class="container">
 
 													<p>project</p>
-													<h5 class="has-animation" data-delay="10">Established a holistic creative direction for Canada Basketball’s first annual Next Gen Tournament in Toronto 2022. Full brand identity and supporting collateral designed for the international invitational to showcase TALENT FROM ACROSS THE GLOBE. Spotlighting the WOMEN'S AND MEN'S Fiba TEAMS from Canada, USA, France, China, and Italy. Broadcast by Sportsnet.</h5>
+													<h5 class="has-animation" data-delay="10">Established a holistic creative direction for Canada Basketball’s first annual Next Gen Tournament in Toronto 2022. Full brand identity and supporting collateral designed for the international invitational to showcase TALENT FROM ACROSS THE GLOBE competing in an Under-23 tournament. Spotlighting the WOMEN'S AND MEN'S Fiba TEAMS and the intersection of music, fashion, community and diversity. Broadcast by Sportsnet.</h5>
 
 												</div>
 
@@ -191,14 +192,19 @@
 										<!--/Row -->
 
 										<!-- Row -->
-										<div class="vc_row row_padding_bottom">
+										<div class="vc_row">
 
 												<div class="container">
 
 														<div class="one_third has-animation" data-delay="150">
-																		<p>Client</p>
-																		<h5>Canada Basketball
-																		<br class="destroy">SPORTSNET</h5>
+																			<p>Client</p>
+																			<h5>Canada Basketball
+																			<br class="destroy">SPORTSNET</h5>
+																</div>
+
+														<div class="one_third has-animation" data-delay="150">
+																		<p>venue</p>
+																		<h5>MATTAMY ATHLETIC CENTRE</h5>
 																</div>
 
 														<div class="one_third last has-animation" data-delay="150">
@@ -212,18 +218,15 @@
 										<!--/Row -->
 
 										<!-- Row -->
-										<div class="vc_row full">
+                    <div class="vc_row row_padding_top">
+                        <div class="container">
 
-											<div class="container">
+                            <h2>COMING SOON</h2>
+														<h5><a href="http://example.com/" style="color:#35FF69;">Check out GLOBLJAM.ca</a></h5>
 
-												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/ml01.jpg" alt="Image Title">
-												</figure>
-
-											</div>
-
-										</div>
-										<!--/Row -->
+                        </div>
+                    </div>
+                    <!--/Row -->
 
                 	<!--/Main Page Content -->
 
@@ -232,7 +235,7 @@
                         <div class="next-project-wrap">
                             <div class="next-project-image" style="background-image:url(images/01hero.jpg)"></div>
                             <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="project01.html">
-                                <div class="main-title">CTG <span>2.0</span></div>
+                                <div class="main-title">FIFA <span>2026</span></div>
                                 <div class="main-subtitle">Next Project</div>
                             </a>
                         </div>
