--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 <ul data-breakpoint="1025" class="flexnav">
                                     <li class="link menu-timeline active"><a class="link" href="#">work</a>
 																			<ul>
-                                        <!-- <li><a class="ajax-link" href="index.html" data-type="page-transition">Canada Basketball x Globl Jam</a></li> -->
+                                        <li><a class="ajax-link" href="index.html" data-type="page-transition">Canada Basketball x Globl Jam</a></li>
 																				<!-- <li><a class="ajax-link" href="index.html" data-type="page-transition">MLSE Foundation x Change the Game 2.0</a></li> -->
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
                                         <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
@@ -120,12 +120,12 @@
 
 
                                 <!-- Section Slide -->
-                                <!-- <div class="swiper-slide active" data-number="01" data-slide="1">
+                                <div class="swiper-slide active" data-number="01" data-slide="1">
                                     <a class="ajax-link-project" data-type="page-transition" href="project01.html">
-                                    	<div class="slide-title" data-number="01"><span>GLOBLJAM x Canada Basketball</span></div>
+                                    	<div class="slide-title" data-number="01"><span>GLOBL JAM</span></div>
                                     </a>
                                     <div class="slide-caption" data-slide-caption="1">Lorem Ipsum</div>
-                                </div> -->
+                                </div>
                                 <!--/Section Slide -->
 
 																<!-- Section Slide -->
@@ -138,62 +138,62 @@
                                 <!--/Section Slide -->
 
                                 <!-- Section Slide -->
-                                <div class="swiper-slide" data-number="01" data-slide="1">
-                                    <a class="ajax-link-project" data-type="page-transition" href="fifa-2026.html">
-                                    	<div class="slide-title" data-number="01"><span>FIFA 2026</span></div>
-                                    </a>
-                                    <div class="slide-caption" data-slide-caption="1">A creative package designed for Toronto’s FIFA World Cup 2026 host city bid.</div>
-                                </div>
-                                <!--/Section Slide -->
-
-
-                                <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="02" data-slide="2">
-                                    <a class="ajax-link-project" data-type="page-transition" href="raptors-tunnel.html">
-                                    	<div class="slide-title" data-number="02"><span>Raptors Tunnel</span></div>
+                                    <a class="ajax-link-project" data-type="page-transition" href="fifa-2026.html">
+                                    	<div class="slide-title" data-number="02"><span>FIFA 2026</span></div>
                                     </a>
-                                   	<div class="slide-caption" data-slide-caption="2">Re-skinning the Toronto Raptors iconic tunnel in the Scotiabank Arena.</div>
+                                    <div class="slide-caption" data-slide-caption="2">A creative package designed for Toronto’s FIFA World Cup 2026 host city bid.</div>
                                 </div>
                                 <!--/Section Slide -->
 
 
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="03" data-slide="3">
-                                    <a class="ajax-link-project" data-type="page-transition" href="mad-love.html">
-                                    	<div class="slide-title" data-number="03"><span>Mad Love</span></div>
+                                    <a class="ajax-link-project" data-type="page-transition" href="raptors-tunnel.html">
+                                    	<div class="slide-title" data-number="03"><span>Raptors Tunnel</span></div>
                                     </a>
-                                    <div class="slide-caption" data-slide-caption="3">A social campaign for Canada Basketball to bring awareness to women athletes in basketball and beyond.</div>
+                                   	<div class="slide-caption" data-slide-caption="3">Re-skinning the Toronto Raptors iconic tunnel in the Scotiabank Arena.</div>
+                                </div>
+                                <!--/Section Slide -->
+
+
+                                <!-- Section Slide -->
+                                <div class="swiper-slide" data-number="04" data-slide="4">
+                                    <a class="ajax-link-project" data-type="page-transition" href="mad-love.html">
+                                    	<div class="slide-title" data-number="04"><span>Mad Love</span></div>
+                                    </a>
+                                    <div class="slide-caption" data-slide-caption="4">A social campaign for Canada Basketball to bring awareness to women athletes in basketball and beyond.</div>
                                 </div>
                                 <!--/Section Slide -->
 
 
                                <!-- Section Slide -->
-                                <div class="swiper-slide" data-number="04" data-slide="4">
+                                <div class="swiper-slide" data-number="05" data-slide="5">
                                     <a class="ajax-link-project" data-type="page-transition" href="pcexpress.html">
-                                    	<div class="slide-title" data-number="04"><span>PC Express</span></div>
+                                    	<div class="slide-title" data-number="05"><span>PC Express</span></div>
                                     </a>
-                                    <div class="slide-caption" data-slide-caption="4">Designed digital creative at Loblaw Digital for Canada's simplest and most delightful online shopping experience, PC Express.</div>
+                                    <div class="slide-caption" data-slide-caption="5">Designed digital creative at Loblaw Digital for Canada's simplest and most delightful online shopping experience, PC Express.</div>
 
                                 </div>
                                 <!--/Section Slide -->
 
 
                                 <!-- Section Slide -->
-                                <div class="swiper-slide" data-number="05" data-slide="5">
+                                <div class="swiper-slide" data-number="06" data-slide="6">
                                     <a class="ajax-link-project" data-type="page-transition" href="project06.html">
-                                   		<div class="slide-title" data-number="05"><span>Fashion Tech.</span></div>
+                                   		<div class="slide-title" data-number="06"><span>Fashion Tech.</span></div>
                                     </a>
-                                   	<div class="slide-caption" data-slide-caption="5">UX/UI and brand identity created for the Women in Fashion Technology program at Fashion Exchange Toronto.</div>
+                                   	<div class="slide-caption" data-slide-caption="6">UX/UI and brand identity created for the Women in Fashion Technology program at Fashion Exchange Toronto.</div>
 
                                 </div>
                                 <!--/Section Slide -->
 
 																<!-- Section Slide -->
-																<div class="swiper-slide" data-number="06" data-slide="6">
+																<div class="swiper-slide" data-number="07" data-slide="7">
 																		<a class="ajax-link-project" data-type="page-transition" href="misc.html">
-																			<div class="slide-title" data-number="06"><span>Misc.</span></div>
+																			<div class="slide-title" data-number="07"><span>Misc.</span></div>
 																		</a>
-																		<div class="slide-caption" data-slide-caption="6">A collection of work across my career as a designer.</div>
+																		<div class="slide-caption" data-slide-caption="7">A collection of work across my career as a designer.</div>
 
 																</div>
 																<!--/Section Slide -->
@@ -208,14 +208,14 @@
                     <div id="image-slider">
                     	<div class="image-slider-wrapper">
 
-														<!-- <div class="slider-img" data-slide="1" data-src="images/globljam-hero.jpg">
+														<div class="slider-img" data-slide="1" data-src="images/globljam-hero.jpg">
                             	<div class="hero-video-wrapper">
                                     <video loop muted class="bgvid">
                                         <source src="motion/CBxSN_Transition.mp4" type="video/mp4">
 										<source src="motion/Transistion-Set.mp4" type="video/webm">
                                     </video>
                                 </div>
-                            </div> -->
+                            </div>
 
 														<!-- <div class="slider-img" data-slide="2" data-src="images/toronto-fifa-hero.jpeg">
                             	<div class="hero-video-wrapper">
@@ -226,7 +226,7 @@
                                 </div>
                             </div> -->
 
-                            <div class="slider-img" data-slide="1" data-src="images/toronto-fifa-hero.jpeg">
+                            <div class="slider-img" data-slide="2" data-src="images/toronto-fifa-hero.jpeg">
                             	<div class="hero-video-wrapper">
                                     <video loop muted class="bgvid">
                                         <source src="motion/Transistion-Set.mp4" type="video/mp4">
@@ -235,11 +235,11 @@
                                 </div>
                             </div>
 
-														<div class="slider-img" data-slide="2" data-src="images/raptors-tunnel-hero.jpg"></div>
-                            <div class="slider-img" data-slide="3" data-src="images/madlove-hero.jpg"></div>
-														<div class="slider-img" data-slide="4" data-src="images/pcx-hero.jpg"></div>
-                            <div class="slider-img" data-slide="5" data-src="images/fashiontech-hero.jpg"></div>
-														<div class="slider-img" data-slide="6" data-src="images/misc-hero.png"></div>
+														<div class="slider-img" data-slide="3" data-src="images/raptors-tunnel-hero.jpg"></div>
+                            <div class="slider-img" data-slide="4" data-src="images/madlove-hero.jpg"></div>
+														<div class="slider-img" data-slide="5" data-src="images/pcx-hero.jpg"></div>
+                            <div class="slider-img" data-slide="6" data-src="images/fashiontech-hero.jpg"></div>
+														<div class="slider-img" data-slide="7" data-src="images/misc-hero.png"></div>
                         </div>
                     </div>
                     <!--/Showcase Gallery -->
@@ -255,13 +255,14 @@
             <footer class="fixed">
                 <div id="footer-container">
 
-                    <div id="counter-wrap" data-hover="05">
+                    <div id="counter-wrap" data-hover="07">
                     		<span data-slide-count="1">01</span>
                         <span data-slide-count="2">02</span>
                         <span data-slide-count="3">03</span>
                         <span data-slide-count="4">04</span>
                         <span data-slide-count="5">05</span>
                       	<span data-slide-count="6">06</span>
+												<span data-slide-count="7">07</span>
                     </div>
 
                     <div class="socials-wrap">
