--- a/raptors-tunnel.html
+++ b/raptors-tunnel.html
@@ -74,7 +74,7 @@
                                 <ul data-breakpoint="1025" class="flexnav">
                                     <li class="link menu-timeline active"><a class="link" href="#">work</a>
 																			<ul>
-                                        <!-- <li><a class="ajax-link" href="index.html" data-type="page-transition">Canada Basketball x Globl Jam</a></li> -->
+                                        <li><a class="ajax-link" href="index.html" data-type="page-transition">Canada Basketball x Globl Jam</a></li>
 																				<!-- <li><a class="ajax-link" href="index.html" data-type="page-transition">MLSE Foundation x Change the Game 2.0</a></li> -->
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
                                         <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
