--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                     <a class="ajax-link-project" data-type="page-transition" href="project01.html">
                                     	<div class="slide-title" data-number="01"><span>GLOBL JAM</span></div>
                                     </a>
-                                    <div class="slide-caption" data-slide-caption="1">Lorem Ipsum</div>
+                                    <div class="slide-caption" data-slide-caption="1">A holistic creative direction for Canada Basketball’s first annual Next Gen Tournament in Toronto 2022</div>
                                 </div>
                                 <!--/Section Slide -->
 
