--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 <ul data-breakpoint="1025" class="flexnav">
                                     <li class="link menu-timeline active"><a class="link" href="#">work</a>
 																			<ul>
-                                        <li><a class="ajax-link" href="index.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
+                                        <li><a class="ajax-link" href="globljam.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
                                         <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
                                         <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love x Canada Basketball</a></li>
@@ -120,7 +120,7 @@
 
                                 <!-- Section Slide -->
                                 <div class="swiper-slide active" data-number="01" data-slide="1">
-                                    <a class="ajax-link-project" data-type="page-transition" href="project01.html">
+                                    <a class="ajax-link-project" data-type="page-transition" href="globljam.html">
                                     	<div class="slide-title" data-number="01"><span>GLOBL JAM</span></div>
                                     </a>
                                     <div class="slide-caption" data-slide-caption="1">A holistic creative direction for Canada Basketball’s first annual Next Gen Tournament in Toronto 2022</div>
