--- a/misc.html
+++ b/misc.html
@@ -74,7 +74,7 @@
                                 <ul data-breakpoint="1025" class="flexnav">
                                     <li class="link menu-timeline active"><a class="link" href="#">work</a>
 																			<ul>
-                                        <li><a class="ajax-link" href="index.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
+                                        <li><a class="ajax-link" href="globljam.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
                                         <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
                                         <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love x Canada Basketball</a></li>
@@ -283,17 +283,17 @@
 
                 	<!--/Main Page Content -->
 
-                    <!-- Project Navigation -->
-                    <div id="project-nav">
-                        <div class="next-project-wrap">
-                            <div class="next-project-image" style="background-image:url(images/toronto-fifa-hero.jpg)"></div>
-                            <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="fifa-2026.html">
-                                <div class="main-title">FIFA <span>2026</span></div>
-                                <div class="main-subtitle">Next Project</div>
-                            </a>
-                        </div>
-                    </div>
-                    <!--/Project Navigation -->
+									<!-- Project Navigation -->
+									<div id="project-nav">
+											<div class="next-project-wrap">
+													<div class="next-project-image" style="background-image:url(images/globljam-hero.jpg)"></div>
+													<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="globljam.html">
+															<div class="main-title">GLOBL <span>JAM</span></div>
+															<div class="main-subtitle">Next Project</div>
+													</a>
+											</div>
+									</div>
+									<!--/Project Navigation -->
 
 
                 </div>
